[tool.poetry]
name = "restfulapi"
version = "0.1.0"
description = ""
authors = ["TurquoisePenguin7 <turquoisehairedpenguinhorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-restful = "^0.3.10"
flask = "^3.0.0"
peewee = "^3.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
